# cpp-playground

./: CMakeLists.txt
examples/: matrices.cpp
src/: main.cpp
